--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
-<script>
-(function(w){
-    var cache = {}
-    function getCachedThing(key) {
-        if(!(key in cache)) {
-            cache[key] = key;
-        }
-        return cache[key];
-    }
+<!DOCTYPE html>
+<html>
+    <head>
+        <script>
+            (function(w){
+                var cache = {}
+                function getCachedThing(key) {
+                    if(!(key in cache)) {
+                        cache[key] = key;
+                    }
+                    return cache[key];
+                }
 
-    var i = 0;
-    setInterval(function() {
-        getCachedThing(i++);
-    }, 1);
-    w.getCachedThing = getCachedThing
-})(window);
-</script>
+                var i = 0;
+                setInterval(function() {
+                    getCachedThing(i++);
+                }, 10);
+                w.getCachedThing = getCachedThing
+            })(window);
+         </script>
+    </head>
+    <body>
+        <p> Hello! </p>
+    </body>
+</html>
+        
+
